--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -86,6 +86,7 @@
     "lodash.merge": "^4.6.2",
     "postcss": "^8.4.5",
     "postcss-selector-parser": "^6.0.6",
+    "publish-browser-extension": "^1.1.2",
     "rimraf": "^3.0.2",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.8",
