ci: send discord notification when 9anime's domain changes (#255)

--- a/.github/workflows/poll-9anime.yml
+++ b/.github/workflows/poll-9anime.yml
@@ -29,3 +29,13 @@ jobs:
       - name: Check Redirect
         run: pnpm esno scripts/check-9anime-domain.ts
         working-directory: packages/web-extension
+
+      - name: Discord Notification
+        if: ${{ failure() }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: "9anime's domain has changed: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_ALERTS_WEBHOOK }}
+          DISCORD_USERNAME: 9anime
+          DISCORD_AVATAR: https://is5-ssl.mzstatic.com/image/thumb/Purple114/v4/05/fe/b0/05feb082-86bf-f2fe-112c-34ec0d644be5/source/512x512bb.jpg
