--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -86,7 +86,7 @@
     "lodash.merge": "^4.6.2",
     "postcss": "^8.4.5",
     "postcss-selector-parser": "^6.0.6",
-    "publish-browser-extension": "^1.1.2",
+    "publish-browser-extension": "^1.1.3",
     "rimraf": "^3.0.2",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.8",
@@ -98,6 +98,7 @@
     "vitest-mock-extended": "*",
     "vue-global-api": "*",
     "vue-tsc": "^0.34.11",
+    "web-ext": "^7.1.1",
     "zip-a-folder": "^1.1.0"
   }
 }
