--- a/packages/web-extension/src/manifest.template.json
+++ b/packages/web-extension/src/manifest.template.json
@@ -38,7 +38,7 @@
   "content_scripts": [
     {
       "js": ["service-player.cs.ts"],
-      "css": ["generated:unknown-style.css"],
+      "css": ["generated:style.css"],
       "all_frames": true
     },
     {
