--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -90,6 +90,7 @@
     "sass": "^1.54.4",
     "tailwindcss": "^3.1.8",
     "typescript": "*",
+    "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.22.4",
     "vite": "*",
     "vite-plugin-web-extension": "*",
