--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -50,6 +50,7 @@
     "vue": "*",
     "vue-router": "^4.1.3",
     "vue-use-request-state": "^0.2.2",
+    "@anime-skip/web-ext-bridge": "workspace:*",
     "webextension-polyfill": "*"
   },
   "devDependencies": {
