--- a/packages/web-ext-bridge/package.json
+++ b/packages/web-ext-bridge/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@anime-skip/web-ext-bridge",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "compile": "tsc --noEmit"
   },
