--- a/packages/player-ui/package.json
+++ b/packages/player-ui/package.json
@@ -9,6 +9,7 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
+    "dev": "vite",
     "compile": "vue-tsc --noEmit",
     "lint": "pnpm lint:check -- --fix",
     "lint:check": "pnpm eslint . --ext .ts,.vue --max-warnings 0"
@@ -27,6 +28,7 @@
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
     "vue": "*",
+    "vue-demi": "^0.13.8",
     "vue-router": "^4.1.3",
     "vue-use-request-state": "^0.2.2"
   },
@@ -51,6 +53,7 @@
     "form-data": "^4.0.0",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.4.16",
+    "postcss-selector-parser": "^6.0.10",
     "tailwindcss": "^3.1.8",
     "typescript": "*",
     "vite": "*",
