--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -27,6 +27,8 @@
     "clean:services": "npm run dev:services -V",
     "build": "cross-env BUILD_MODE=prod vite build",
     "build:chrome": "cross-env BUILD_FOR=chrome pnpm build",
+    "build:dev": "cross-env BUILD_MODE=dev BUILD_MODE=prod vite build",
+    "build:chrome:dev": "cross-env BUILD_MODE=dev BUILD_FOR=chrome pnpm build",
     "build:beta": "cross-env BUILD_MODE=beta vite build",
     "build:beta:chrome": "cross-env BUILD_FOR=chrome pnpm build:beta",
     "build:staged": "cross-env BUILD_MODE=staged vite build",
