--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -21,8 +21,8 @@
     "compile": "vue-tsc --noEmit",
     "test": "vitest",
     "test:e2e": "echo 'TODO'",
-    "lint": "pnpm lint:check -- --fix",
-    "lint:check": "pnpm eslint . --ext .ts,.vue --max-warnings 0",
+    "lint": "eslint . --ext .ts,.vue --max-warnings 0 --fix",
+    "lint:check": "eslint . --ext .js,.ts,.vue --max-warnings 0",
     "lint:web-ext": "web-ext lint -s dist",
     "clean:services": "npm run dev:services -V",
     "build": "cross-env BUILD_MODE=prod vite build",
@@ -39,10 +39,10 @@
   },
   "dependencies": {
     "@anime-skip/api-client": "^2.6.2",
-    "@anime-skip/eslint-config": "workspace:*",
     "@anime-skip/player-ui": "workspace:*",
     "@anime-skip/ui": "^3.1.5",
     "@anime-skip/usage-stats-client": "^1.4.4",
+    "@anime-skip/web-ext-bridge": "workspace:*",
     "@vueuse/core": "^8.9.4",
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
@@ -55,7 +55,6 @@
     "vue": "*",
     "vue-router": "^4.1.3",
     "vue-use-request-state": "^0.2.2",
-    "@anime-skip/web-ext-bridge": "workspace:*",
     "webextension-polyfill": "*"
   },
   "devDependencies": {
@@ -69,8 +68,8 @@
     "@types/node": "^16.11.48",
     "@types/rimraf": "^3.0.2",
     "@types/webextension-polyfill": "^0.9.0",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "@typescript/lib-dom": "npm:@types/web",
     "@vitejs/plugin-vue": "^2.3.2",
     "@vue/compiler-sfc": "^3.2.37",
@@ -79,10 +78,11 @@
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "eslint": "^8.21.0",
+    "eslint": "^8.22.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.3.0",
     "esno": "*",
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
