--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -68,8 +68,8 @@
     "@types/node": "^16.11.48",
     "@types/rimraf": "^3.0.2",
     "@types/webextension-polyfill": "^0.9.0",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "@typescript/lib-dom": "npm:@types/web",
     "@vitejs/plugin-vue": "^2.3.2",
     "@vue/compiler-sfc": "^3.2.37",
@@ -78,11 +78,11 @@
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "eslint": "^8.22.0",
+    "eslint": "^8.21.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint-plugin-vue": "^8.7.1",
     "esno": "*",
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
@@ -101,6 +101,7 @@
     "vite-plugin-web-extension": "*",
     "vitest": "*",
     "vitest-mock-extended": "*",
+    "vue-global-api": "*",
     "vue-tsc": "^0.40.1",
     "web-ext": "^7.1.1",
     "zip-a-folder": "^1.1.5"
