--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -78,7 +78,7 @@
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "eslint": "8.21.0",
+    "eslint": "^8.21.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-promise": "^6.0.0",
