chore: change web-extension build and start commands

--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -12,25 +12,16 @@
   },
   "type": "module",
   "scripts": {
-    "start": "vite build --watch",
-    "start:chrome": "cross-env BUILD_FOR=chrome pnpm start",
-    "dev": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"pnpm dev:extension\" \"pnpm dev:services\"",
-    "dev:extension": "cross-env BUILD_MODE=dev pnpm start",
-    "dev:chrome": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"cross-env BUILD_FOR=chrome pnpm dev:extension\" \"pnpm dev:services\"",
-    "dev:services": "docker-compose -f docker/docker-compose.yml up --abort-on-container-exit",
+    "dev": "vite build --watch --mode development",
+    "dev:chrome": "cross-env BROWSER=chrome pnpm dev",
     "compile": "vue-tsc --noEmit",
     "test": "vitest",
     "test:e2e": "echo 'TODO'",
     "lint:web-ext": "web-ext lint -s dist",
-    "clean:services": "npm run dev:services -V",
-    "build": "cross-env BUILD_MODE=prod vite build",
-    "build:chrome": "cross-env BUILD_FOR=chrome pnpm build",
-    "build:dev": "cross-env BUILD_MODE=dev BUILD_MODE=prod vite build",
-    "build:chrome:dev": "cross-env BUILD_MODE=dev BUILD_FOR=chrome pnpm build",
-    "build:beta": "cross-env BUILD_MODE=beta vite build",
-    "build:beta:chrome": "cross-env BUILD_FOR=chrome pnpm build:beta",
-    "build:staged": "cross-env BUILD_MODE=staged vite build",
-    "build:staged:chrome": "cross-env BUILD_FOR=chrome pnpm build:staged",
+    "build": "vite build",
+    "build:chrome": "cross-env BROWSER=chrome pnpm build",
+    "build:dev": "vite build --mode development",
+    "build:chrome:dev": "cross-env BROWSER=chrome pnpm build:dev",
     "zip-sources": "esno scripts/zip-sources.ts",
     "package": "esno scripts/package/index.ts",
     "package:dry": "cross-env DRY_RUN=true pnpm package"
@@ -64,14 +55,12 @@
     "@types/lodash.merge": "^4.6.7",
     "@types/md5": "^2.3.2",
     "@types/node": "^16.11.48",
-    "@types/rimraf": "^3.0.2",
     "@types/webextension-polyfill": "^0.9.0",
     "@typescript/lib-dom": "npm:@types/web",
     "@vitejs/plugin-vue": "^2.3.2",
     "@vue/compiler-sfc": "^3.2.37",
     "autoprefixer": "^10.4.8",
     "caniuse-lite": "^1.0.30001375",
-    "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "esno": "*",
@@ -82,7 +71,6 @@
     "postcss": "^8.4.16",
     "postcss-selector-parser": "^6.0.10",
     "publish-browser-extension": "^1.1.4",
-    "rimraf": "^3.0.2",
     "sass": "^1.54.4",
     "tailwindcss": "^3.1.8",
     "typescript": "*",
