bootstrap initial pinia store and vue-query implementations

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "body-parser",
         "download",
         "express",
-        "safe-compare"
+        "safe-compare",
+        "react"
       ]
     }
   },
