--- a/packages/player-ui/package.json
+++ b/packages/player-ui/package.json
@@ -25,8 +25,10 @@
     "fuzzysort": "^1.9.0",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
+    "pinia": "^2.0.21",
     "vue": "*",
     "vue-demi": "^0.13.8",
+    "vue-query": "^1.26.0",
     "vue-router": "^4.1.3",
     "vue-use-request-state": "^0.2.2"
   },
