--- a/packages/player-ui/package.json
+++ b/packages/player-ui/package.json
@@ -48,6 +48,7 @@
     "tailwindcss": "^3.1.8",
     "typescript": "*",
     "vite": "*",
+    "vite-plugin-vue-auto-name": "^0.0.4",
     "vue-global-api": "*",
     "vue-tsc": "^0.40.1"
   }
