--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -41,6 +41,7 @@
     "fuzzysort": "^1.9.0",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
+    "pinia": "^2.0.21",
     "vue": "*",
     "vue-router": "^4.1.3",
     "vue-use-request-state": "^0.2.2",
