--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -43,6 +43,7 @@
     "md5": "^2.3.0",
     "pinia": "^2.0.21",
     "vue": "*",
+    "vue-query": "^1.26.0",
     "vue-router": "^4.1.3",
     "vue-use-request-state": "^0.2.2",
     "webextension-polyfill": "*"
@@ -77,7 +78,7 @@
     "typescript": "*",
     "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.22.4",
-    "vite": "*",
+    "vite": "^3.0.9",
     "vite-plugin-web-extension": "*",
     "vitest": "*",
     "vitest-mock-extended": "*",
