--- a/packages/inspector/src/manifest.template.json
+++ b/packages/inspector/src/manifest.template.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "{{firefox}}.manifest_version": 2,
   "{{chrome}}.manifest_version": 3,
-  "icon": {
+  "icons": {
     "16": "assets/icon-16.png",
     "32": "assets/icon-32.png",
     "48": "assets/icon-48.png",
