--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -22,8 +22,8 @@
     "build:chrome": "cross-env BROWSER=chrome pnpm build",
     "build:dev": "vite build --mode development",
     "build:chrome:dev": "cross-env BROWSER=chrome pnpm build:dev",
-    "zip-sources": "esno scripts/zip-sources.ts",
-    "package": "esno scripts/package/index.ts",
+    "zip-sources": "tsx scripts/zip-sources.ts",
+    "package": "tsx scripts/package/index.ts",
     "package:dry": "cross-env DRY_RUN=true pnpm package"
   },
   "dependencies": {
@@ -63,7 +63,6 @@
     "caniuse-lite": "^1.0.30001375",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "esno": "*",
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
     "jsdom": "*",
@@ -73,6 +72,7 @@
     "publish-browser-extension": "^1.1.4",
     "sass": "^1.54.4",
     "tailwindcss": "^3.1.8",
+    "tsx": "^3.9.0",
     "typescript": "*",
     "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.22.4",
