chore: use tsx for 9anime domain check

--- a/.github/workflows/poll-9anime.yml
+++ b/.github/workflows/poll-9anime.yml
@@ -27,7 +27,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Check Redirect
-        run: pnpm esno scripts/check-9anime-domain.ts
+        run: pnpm tsx scripts/check-9anime-domain.ts
         working-directory: packages/web-extension
 
       - name: Discord Notification
