--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -34,6 +34,7 @@
     "daisyui": "^2.51.5",
     "postcss": "^8.4.22",
     "postcss-unroot": "^1.0.2",
+    "rollup-plugin-visualizer": "^5.9.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4",
     "unplugin-auto-import": "^0.15.3",
