--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.0.2",
+    "fuzzy": "^0.1.3",
     "graphql": "^16.6.0",
     "graphql-request": "~5.1.0",
     "graphql-tag": "^2.12.6",
