--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -45,7 +45,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.0.2",
-    "fuzzy": "^0.1.3",
+    "fuzzysort": "^2.0.4",
     "graphql": "^16.6.0",
     "graphql-request": "~5.1.0",
     "graphql-tag": "^2.12.6",
