--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -3,27 +3,22 @@
   "version": "2.0.0-alpha1",
   "type": "module",
   "scripts": {
-    "dev": "turbo turbo:dev --filter=@anime-skip/extension...",
-    "build": "turbo turbo:build --filter=@anime-skip/extension...",
-    "compile": "turbo turbo:compile --filter=@anime-skip/extension...",
-    "turbo:dev": "vite dev",
-    "turbo:build": "vite build",
-    "turbo:compile": "vue-tsc"
+    "dev": "pnpm --filter player build && wxt",
+    "dev:firefox": "pnpm -s dev -- -b firefox",
+    "build": "pnpm --filter player build && wxt build",
+    "build:firefox": "pnpm -s build -- -b firefox",
+    "zip": "pnpm --filter player build && wxt zip",
+    "zip:firefox": "pnpm -s zip -- -b firefox",
+    "compile": "tsc --noEmit",
+    "postinstall": "wxt prepare"
   },
   "dependencies": {
     "@anime-skip/player": "workspace:*",
-    "@webext-core/messaging": "^1.3.0",
-    "@webext-core/proxy-service": "^1.1.0",
-    "@webext-core/storage": "^1.1.2",
-    "vue": "^3.2.47"
+    "@webext-core/messaging": "^1.4.0"
   },
   "devDependencies": {
-    "@types/webextension-polyfill": "^0.10.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "vite-plugin-web-extension": "^3.0.1",
-    "vue-tsc": "^1.2.0",
-    "webextension-polyfill": "^0.10.0"
+    "sass": "^1.69.5",
+    "typescript": "^5.3.2",
+    "wxt": "^0.13.0"
   }
 }
