chore: Add `dev:prod` for developing the extension against the production API

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "pnpm --filter player build && wxt",
     "dev:firefox": "pnpm -s dev -- -b firefox",
+    "dev:prod": "pnpm --filter player build && wxt --mode production",
+    "dev:prod:firefox": "pnpm -s dev:prod -- -b firefox",
     "build": "pnpm --filter player build && wxt build",
     "build:firefox": "pnpm -s build -- -b firefox",
     "zip": "pnpm --filter player build && wxt zip",
