--- a/packages/player/tsconfig.build.json
+++ b/packages/player/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/**/*"],
+  "include": ["src"],
+  "exclude": ["**/__tests__/**"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
