--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -48,6 +48,7 @@
     "unplugin-icons": "^0.16.6",
     "vite": "^5.0.10",
     "vite-plugin-css-injected-by-js": "^3.3.1",
+    "vite-plugin-dts": "^3.7.0",
     "vitest": "^1.1.0",
     "vue-tsc": "^1.8.27"
   },
